Bug 1239670 - Memory table: Use min-width:0 on flex items to prevent overflow. r=fitzgen
UltraBlame original commit: f0b09da3f4caaf540ecce8f7474fe1e9a46c5e42

--- a/devtools/client/themes/memory.css
+++ b/devtools/client/themes/memory.css
@@ -227,6 +227,12 @@ html, body, #app, #memory-tool {
 
   flex: 1;
   background-color: var(--theme-toolbar-background);
+
+  
+
+
+
+  min-width: 0;
 }
 
 #heap-view > .heap-view-panel {
@@ -242,6 +248,12 @@ html, body, #app, #memory-tool {
 
 
   flex: 1;
+
+  
+
+
+
+  min-width: 0;
 }
 
 #heap-view > .heap-view-panel > .snapshot-status,
